; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_traps.c_show_backtrace.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/kernel/extr_traps.c_show_backtrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }
%struct.pt_regs = type { i64*, i64 }

@raw_show_trace = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [13 x i8] c"Call Trace:\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.task_struct*, %struct.pt_regs*)* @show_backtrace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_backtrace(%struct.task_struct* %0, %struct.pt_regs* %1) #0 {
  %3 = alloca %struct.task_struct*, align 8
  %4 = alloca %struct.pt_regs*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  store %struct.pt_regs* %1, %struct.pt_regs** %4, align 8
  %8 = load %struct.pt_regs*, %struct.pt_regs** %4, align 8
  %9 = getelementptr inbounds %struct.pt_regs, %struct.pt_regs* %8, i32 0, i32 0
  %10 = load i64*, i64** %9, align 8
  %11 = getelementptr inbounds i64, i64* %10, i64 29
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %5, align 8
  %13 = load %struct.pt_regs*, %struct.pt_regs** %4, align 8
  %14 = getelementptr inbounds %struct.pt_regs, %struct.pt_regs* %13, i32 0, i32 0
  %15 = load i64*, i64** %14, align 8
  %16 = getelementptr inbounds i64, i64* %15, i64 31
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %6, align 8
  %18 = load %struct.pt_regs*, %struct.pt_regs** %4, align 8
  %19 = getelementptr inbounds %struct.pt_regs, %struct.pt_regs* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %7, align 8
  %21 = load i64, i64* @raw_show_trace, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %27, label %23

23:                                               ; preds = %2
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @__kernel_text_address(i64 %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %23, %2
  %28 = load i64, i64* %5, align 8
  %29 = call i32 @show_raw_backtrace(i64 %28)
  br label %43

30:                                               ; preds = %23
  %31 = call i32 @printk(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %32

32:                                               ; preds = %38, %30
  %33 = load i64, i64* %7, align 8
  %34 = call i32 @print_ip_sym(i64 %33)
  %35 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %36 = load i64, i64* %7, align 8
  %37 = call i64 @unwind_stack(%struct.task_struct* %35, i64* %5, i64 %36, i64* %6)
  store i64 %37, i64* %7, align 8
  br label %38

38:                                               ; preds = %32
  %39 = load i64, i64* %7, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %32, label %41

41:                                               ; preds = %38
  %42 = call i32 @printk(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %43

43:                                               ; preds = %41, %27
  ret void
}

declare dso_local i32 @__kernel_text_address(i64) #1

declare dso_local i32 @show_raw_backtrace(i64) #1

declare dso_local i32 @printk(i8*) #1

declare dso_local i32 @print_ip_sym(i64) #1

declare dso_local i64 @unwind_stack(%struct.task_struct*, i64*, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
